--- a/public/test.html
+++ b/public/test.html
@@ -12,11 +12,11 @@
   <input type="text" id="name" name="name"><br><br>
   <label for="email">Email:</label>
   <input type="email" id="email" name="email"><br><br>
-  <button type="button" onclick="submitForm()">Submit</button>
+  <button type="button" onclick="submitform()">Submit</button>
  </form>
 
  <script>
-  async function submitForm() {
+  async function submitform() {
    const formData = {
     name: document.getElementById('name').value,
     email: document.getElementById('email').value
