--- a/public/test.html
+++ b/public/test.html
@@ -22,7 +22,7 @@
     email: document.getElementById('email').value
    };
 
-   const response = await fetch('https://us-central1-hellostu-xyz-ed8a4.cloudfunctions.net/submitform', {
+   const response = await fetch('https://submitform-mczpifsryq-uc.a.run.app', {
     method: 'POST',
     headers: {
      'Content-Type': 'application/json'
