--- a/src/pages/songs-for-laa-laa/index.html
+++ b/src/pages/songs-for-laa-laa/index.html
@@ -15,9 +15,10 @@
   <header class="py-8 text-center bg-white/80 p-3 rounded-t-lg">
    <h1 class="text-4xl font-bold text-gray-800 mb-4">Songs for Laa Laa</h1>
    <p class="text-gray-600 leading-relaxed">
-    A library of carefully curated playlists, made for and shared with a very special person. Musical connection fuelled
+    A library of carefully curated playlists, made for and shared with a very special person. Musical mixtapes for the
+    cloud era inspired
     by love, laughter, heartbreak,
-    emoji's, friendship, trust, teletubbies, gifs, chicken wine, little sweet treats and cheese.
+    emoji's, friendship, trust, teletubbies, gifs, beauty, chicken wine, tea, little sweet treats and cheese.
    </p>
   </header>
 
@@ -95,6 +96,19 @@
      <a href="https://music.apple.com/gb/playlist/laa-laa-bonus-tracks/pl.u-jV89arNIdzdZkl" class="no-underline">Bonus
       Tracks</a>
      <a href="#" class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">also on Spotify</a>
+    </div>
+   </div>
+   <!-- Card End -->
+
+   <!-- MORE Card -->
+   <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hover:brightness-125 transition duration-300">
+     <img src="/more400.jpg" alt="MOARRR playlists cming soon" class="w-full aspect-square object-cover" />
+    </a>
+    <div class="p-3 space-y-1">
+     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="no-underline">More Coming - Maybe?</a>
+     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+      class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">Coming soon...</a>
     </div>
    </div>
    <!-- Card End -->
