--- a/src/pages/songs-for-laa-laa/index.html
+++ b/src/pages/songs-for-laa-laa/index.html
@@ -15,7 +15,7 @@
   <header class="py-8 text-center bg-white/80 p-3 rounded-t-lg">
    <h1 class="text-4xl font-bold text-gray-800 mb-4">Songs for Laa Laa</h1>
    <p class="text-gray-600 leading-relaxed">
-    A library of carefully curated playlists, made for and shared with a very special person. Musical mixtapes for the
+    A library of carefully curated playlists, made for and shared with a very special someone. Musical mixtapes for the
     cloud era inspired
     by love, laughter, heartbreak,
     emoji's, friendship, trust, teletubbies, gifs, beauty, chicken wine, tea, little sweet treats and cheese.
@@ -126,7 +126,7 @@
 
   <!-- Footer Section -->
   <footer class="py-6 text-center">
-   <p class="text-white text-sm bg-black/60 rounded mx-auto p-2">Created with care and sprinkled with love by
+   <p class="text-white text-sm bg-black/60 rounded mx-auto mb-6 p-2">Created with care and sprinkled with love by
     Tinky Winky.
    </p>
   </footer>
