update all links

--- a/src/pages/songs-for-laa-laa/index.html
+++ b/src/pages/songs-for-laa-laa/index.html
@@ -2,118 +2,125 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
- <meta name="robots" content="noindex, nofollow">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Songs for Laa Laa</title>
- <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Songs for Laa Laa</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-blue-200 bg-[url('/laalaa_background.jpg')] bg-cover bg-fixed bg-center min-h-screen">
- <div class="container mx-auto px-4 max-w-2xl pt-10">
-  <!-- Header Section -->
-  <header class="py-8 text-center bg-white/80 p-3 rounded-t-lg">
-   <h1 class="text-4xl font-bold text-gray-800 mb-4">Songs for Laa Laa</h1>
-   <p class="text-gray-600 leading-relaxed">
-    A library of carefully curated playlists, made for and shared with a very special someone. Musical mixtapes for the
-    cloud era inspired
-    by love, laughter, heartbreak,
-    emoji's, friendship, trust, teletubbies, gifs, beauty, chicken wine, tea, little sweet treats and cheese.
-   </p>
-  </header>
+  <div class="container mx-auto px-4 max-w-2xl pt-10">
+    <!-- Header Section -->
+    <header class="py-8 text-center bg-white/80 p-3 rounded-t-lg">
+      <h1 class="text-4xl font-bold text-gray-800 mb-4">Songs for Laa Laa</h1>
+      <p class="text-gray-600 leading-relaxed">
+        A library of carefully curated playlists, made for and shared with a very special someone. Musical mixtapes for
+        the
+        cloud era inspired
+        by love, laughter, heartbreak,
+        emoji's, friendship, trust, teletubbies, gifs, beauty, chicken wine, tea, little sweet treats and cheese.
+      </p>
+    </header>
 
-  <!-- Cards Section -->
-  <main class="grid grid-cols-2 gap-6 mb-12 bg-white/80 p-6 rounded-b-lg">
+    <!-- Cards Section -->
+    <main class="grid grid-cols-2 gap-6 mb-12 bg-white/80 p-6 rounded-b-lg">
 
-   <!-- Daily Drop Card -->
-   <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
-    <a href="https://music.apple.com/gb/playlist/laa-laa-daily-drop/pl.u-WabZzKVUdZdjXy"
-     class="hover:brightness-125 transition duration-300">
-     <img src="/daily_drop400.jpg" alt="Laa Laa's Daily Drop playlist" class="w-full aspect-square object-cover">
-    </a>
-    <div class="p-3 space-y-1">
-     <a href="https://music.apple.com/gb/playlist/laa-laa-daily-drop/pl.u-WabZzKVUdZdjXy" class="no-underline">The Daily
-      Drop</a>
-     <a href="#" class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">also on Spotify</a>
-    </div>
-   </div>
-   <!-- Card End -->
-
-
-   <!-- Birthday Bangers Card -->
-   <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
-    <a href="https://music.apple.com/gb/playlist/laa-laa-birthday-bangers/pl.u-xlyNAektkVk10G"
-     class="hover:brightness-125 transition duration-300">
-     <img src="/birthday400.jpg" alt="Birthday Bangers playlist" class="w-full aspect-square object-cover" />
-    </a>
-    <div class="p-3 space-y-1">
-     <a href="https://music.apple.com/gb/playlist/laa-laa-birthday-bangers/pl.u-xlyNAektkVk10G"
-      class="no-underline">Birthday Bangers</a>
-     <a href="#" class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">also on Spotify</a>
-    </div>
-   </div>
-   <!-- Card End -->
+      <!-- Daily Drop Card -->
+      <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
+        <a href="https://music.apple.com/gb/playlist/laa-laa-daily-drop/pl.u-WabZzKVUdZdjXy"
+          class="hover:brightness-125 transition duration-300">
+          <img src="/daily_drop400.jpg" alt="Laa Laa's Daily Drop playlist" class="w-full aspect-square object-cover">
+        </a>
+        <div class="p-3 space-y-1">
+          <a href="https://music.apple.com/gb/playlist/laa-laa-daily-drop/pl.u-WabZzKVUdZdjXy" class="no-underline">The
+            Daily
+            Drop</a>
+          <a href="https://music.apple.com/gb/playlist/laa-laa-daily-drop/pl.u-WabZzKVUdZdjXy"
+            class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">only on Apple Music</a>
+        </div>
+      </div>
+      <!-- Card End -->
 
 
-   <!-- Sweet Dreams Card -->
-   <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
-    <a href="https://music.apple.com/gb/playlist/laa-laa-sweet-dreams/pl.u-kv9l01vt707kde"
-     class="hover:brightness-125 transition duration-300">
-     <img src="/sweet_dreams400.jpg" alt="Sweet Dreams for Laa Laa playlist"
-      class="w-full aspect-square object-cover" />
-    </a>
-    <div class="p-3 space-y-1">
-     <a href="https://music.apple.com/gb/playlist/laa-laa-sweet-dreams/pl.u-kv9l01vt707kde" class="no-underline">Sweet
-      Dreams</a>
-     <a href="#" class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">also on Spotify</a>
-    </div>
-   </div>
-   <!-- Card End -->
+      <!-- Birthday Bangers Card -->
+      <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
+        <a href="https://music.apple.com/gb/playlist/laa-laa-birthday-bangers/pl.u-xlyNAektkVk10G"
+          class="hover:brightness-125 transition duration-300">
+          <img src="/birthday400.jpg" alt="Birthday Bangers playlist" class="w-full aspect-square object-cover" />
+        </a>
+        <div class="p-3 space-y-1">
+          <a href="https://music.apple.com/gb/playlist/laa-laa-birthday-bangers/pl.u-xlyNAektkVk10G"
+            class="no-underline">Birthday Bangers</a>
+          <a href="https://open.spotify.com/playlist/4QRGOSHLaSEuzF15s6Qtno?si=AmjB8zYISo6r2wVuS1d1Hg"
+            class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">also on Spotify</a>
+        </div>
+      </div>
+      <!-- Card End -->
 
 
-   <!-- Interview Prep Card -->
-   <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
-    <a href="https://music.apple.com/gb/playlist/laa-laa-interview-prep/pl.u-gxblvBGI5r5LX3"
-     class="hover:brightness-125 transition duration-300">
-     <img src="/interview400.jpg" alt="The interview prep playlist" class="w-full aspect-square object-cover" />
-    </a>
-    <div class="p-3 space-y-1">
-     <a href="https://music.apple.com/gb/playlist/laa-laa-interview-prep/pl.u-gxblvBGI5r5LX3"
-      class="no-underline">Interview Prep</a>
-     <a href="#" class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">also on Spotify</a>
-    </div>
-   </div>
-   <!-- Card End -->
+      <!-- Sweet Dreams Card -->
+      <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
+        <a href="https://music.apple.com/gb/playlist/laa-laa-sweet-dreams/pl.u-kv9l01vt707kde"
+          class="hover:brightness-125 transition duration-300">
+          <img src="/sweet_dreams400.jpg" alt="Sweet Dreams for Laa Laa playlist"
+            class="w-full aspect-square object-cover" />
+        </a>
+        <div class="p-3 space-y-1">
+          <a href="https://music.apple.com/gb/playlist/laa-laa-sweet-dreams/pl.u-kv9l01vt707kde"
+            class="no-underline">Sweet
+            Dreams</a>
+          <a href="https://music.apple.com/gb/playlist/laa-laa-sweet-dreams/pl.u-kv9l01vt707kde"
+            class="text-sm mt-2 text-blue-600 hover:text-only block">only on Apple Music</a>
+        </div>
+      </div>
+      <!-- Card End -->
 
 
-   <!-- Bonus Tracks Card -->
-   <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
-    <a href="https://music.apple.com/gb/playlist/laa-laa-bonus-tracks/pl.u-jV89arNIdzdZkl"
-     class="hover:brightness-125 transition duration-300">
-     <img src="/bonus400.jpg" alt="The bonus tracks playlist" class="w-full aspect-square object-cover" />
-    </a>
-    <div class="p-3 space-y-1">
-     <a href="https://music.apple.com/gb/playlist/laa-laa-bonus-tracks/pl.u-jV89arNIdzdZkl" class="no-underline">Bonus
-      Tracks</a>
-     <a href="#" class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">also on Spotify</a>
-    </div>
-   </div>
-   <!-- Card End -->
-
-   <!-- MORE Card -->
-   <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hover:brightness-125 transition duration-300">
-     <img src="/more400.jpg" alt="MOARRR playlists cming soon" class="w-full aspect-square object-cover" />
-    </a>
-    <div class="p-3 space-y-1">
-     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="no-underline">More Coming - Maybe?</a>
-     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-      class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">Coming soon...</a>
-    </div>
-   </div>
-   <!-- Card End -->
+      <!-- Interview Prep Card -->
+      <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
+        <a href="https://music.apple.com/gb/playlist/laa-laa-interview-prep/pl.u-gxblvBGI5r5LX3"
+          class="hover:brightness-125 transition duration-300">
+          <img src="/interview400.jpg" alt="The interview prep playlist" class="w-full aspect-square object-cover" />
+        </a>
+        <div class="p-3 space-y-1">
+          <a href="https://music.apple.com/gb/playlist/laa-laa-interview-prep/pl.u-gxblvBGI5r5LX3"
+            class="no-underline">Interview Prep</a>
+          <a href="https://open.spotify.com/playlist/0IyqRXvpSWEd1VhUgRHksR?si=HBnK2kLtSTafssimHGhUIA"
+            class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">also on Spotify</a>
+        </div>
+      </div>
+      <!-- Card End -->
 
 
+      <!-- Bonus Tracks Card -->
+      <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
+        <a href="https://music.apple.com/gb/playlist/laa-laa-bonus-tracks/pl.u-jV89arNIdzdZkl"
+          class="hover:brightness-125 transition duration-300">
+          <img src="/bonus400.jpg" alt="The bonus tracks playlist" class="w-full aspect-square object-cover" />
+        </a>
+        <div class="p-3 space-y-1">
+          <a href="https://music.apple.com/gb/playlist/laa-laa-bonus-tracks/pl.u-jV89arNIdzdZkl"
+            class="no-underline">Bonus
+            Tracks</a>
+          <a href="https://music.apple.com/gb/playlist/laa-laa-bonus-tracks/pl.u-jV89arNIdzdZkl"
+            class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">only on Apple Music</a>
+        </div>
+      </div>
+      <!-- Card End -->
+
+      <!-- MORE Card -->
+      <div class="bg-white rounded-lg shadow-md overflow-hidden max-w-xs mx-auto">
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hover:brightness-125 transition duration-300">
+          <img src="/more400.jpg" alt="MOARRR playlists cming soon" class="w-full aspect-square object-cover" />
+        </a>
+        <div class="p-3 space-y-1">
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="no-underline">More Coming - Maybe?</a>
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+            class="text-sm mt-2 text-blue-600 hover:text-blue-800 block">Coming soon...</a>
+        </div>
+      </div>
+      <!-- Card End -->
 
 
 
@@ -122,15 +129,17 @@
 
 
 
-  </main>
 
-  <!-- Footer Section -->
-  <footer class="py-6 text-center">
-   <p class="text-white text-sm bg-black/60 rounded mx-auto mb-6 p-2">Created with care and sprinkled with love by
-    Tinky Winky.
-   </p>
-  </footer>
- </div>
+
+    </main>
+
+    <!-- Footer Section -->
+    <footer class="py-6 text-center">
+      <p class="text-white text-sm bg-black/60 rounded mx-auto mb-6 p-2">Created with care and sprinkled with love by
+        Tinky Winky.
+      </p>
+    </footer>
+  </div>
 
 </body>
 
