--- a/src/pages/songs-for-laa-laa/index.html
+++ b/src/pages/songs-for-laa-laa/index.html
@@ -15,7 +15,7 @@
     <header class="py-8 text-center bg-white/80 p-3 rounded-t-lg">
       <h1 class="text-4xl font-bold text-gray-800 mb-4">Songs for Laa Laa</h1>
       <p class="text-gray-600 leading-relaxed">
-        A library of carefully curated playlists, made for and shared with a very special someone. Musical mixtapes for
+        A library of carefully curated playlists, made for a good friend. Musical mixtapes for
         the
         cloud era inspired
         by love, laughter, heartbreak,
