update text colour

--- a/src/pages/songs-for-laa-laa/index.html
+++ b/src/pages/songs-for-laa-laa/index.html
@@ -27,7 +27,7 @@
     <!-- Header Section -->
     <header class="py-8 text-center bg-white/70 p-3 rounded-t-lg">
       <h1 class="text-4xl font-bold text-gray-800 mb-4">Songs for Laa Laa</h1>
-      <p class="text-gray-600 leading-relaxed">
+      <p class="text-black leading-relaxed">
         A library of carefully curated playlists, made for a good friend. Musical mixtapes for
         the
         cloud era inspired
@@ -135,13 +135,6 @@
         </div>
       </div>
       <!-- Card End -->
-
-
-
-
-
-
-
 
 
 
